--- a/frontend-react/src/pages/ExerciseList.css
+++ b/frontend-react/src/pages/ExerciseList.css
@@ -101,7 +101,7 @@
 .layout-container {
   display: flex;
   width: 100%;
-  max-width: 1600px;
+  max-width: 100%;
   margin: 0 auto;
   padding: 2rem;
   box-sizing: border-box;
